Fix: White background (on mobile).

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   width: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  background-color: black;
 }
 
 
